@@ -1,4 +1,4 @@
-$Id: THANKS,v 1.36 2000/08/30 08:55:15 stelian Exp $
+$Id: THANKS,v 1.37 2000/09/01 14:26:23 stelian Exp $
 
 Dump and restore were written by the people of the CSRG at the University
 of California, Berkeley.
@@ -29,6 +29,7 @@ Isaac Chuang		ike@isl.stanford.edu
 Rainer Clasen		bj@ncc.cicely.de
 W. Reilly Cooley	wcooley@nakedape.cc
 Abhijit Dasgupta	abhijit@ans.net
+John R. Dennison	gerdesas@users.sourceforge.net
 Andreas Dilger		adilger@home.com
 Bernhard Erdmann	bernhard.erdmann@gmx.de
 Jason Fearon		jasonf@netrider.org.au
